[package]
name = "rssget"
authors = ["Trevor Arjeski"]
version = "0.1.0"
edition = "2021"
description = "A tool to get RSS feeds"
keywords = ["rss", "cli", "util"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
dirs = "4.0"
rss = { version = "2.0", default-features = false, features = [] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
textwrap = "0.15"
ureq = "2.5"