[package]
name = "rssget"
authors = ["Trevor Arjeski"]
version = "0.1.3"
edition = "2021"
description = "A tool to get RSS feeds"
keywords = ["rss", "cli", "util"]
license = "GPL-3.0-or-later"
repository = "https://github.com/trevarj/rssget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
colored = "2.0"
dirs = "4.0"
rss = { version = "2.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
textwrap = { version = "0.15", features = ["terminal_size"] }
ureq = "2.5"